# PicoGameConsole

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UpperCover.stl  console_io.cpp  console_io.hpp  lcd.cpp  lcd.hpp  lcd_draw.cpp  lcd_draw.hpp  main.cpp  run.bat
lcd_fonts/: lcd_font12.cpp  lcd_font16.cpp  lcd_font20.cpp  lcd_font24.cpp  lcd_font8.cpp  lcd_fonts.hpp
old_design/: BottomCover.stl  Holder.stl  PushBlock.stl  manual.md
pcb/pico_game_console/: 3d_model.mtl  fp-info-cache  pico_game_console.kicad_pcb  pico_game_console.kicad_prl  pico_game_console.kicad_pro  pico_game_console.kicad_sch
pcb/pico_game_console/plots/: pico_game_console-B_Cu.gbr  pico_game_console-B_Mask.gbr  pico_game_console-B_Paste.gbr  pico_game_console-B_Silkscreen.gbr  pico_game_console-Edge_Cuts.gbr  pico_game_console-F_Cu.gbr  pico_game_console-F_Mask.gbr  pico_game_console-F_Paste.gbr  pico_game_console-F_Silkscreen.gbr  pico_game_console-NPTH-drl_map.gbr  pico_game_console-NPTH.drl  pico_game_console-PTH-drl_map.gbr  pico_game_console-PTH.drl  pico_game_console-job.gbrjob  plots.rar
src/: console_audio.cpp  console_audio.hpp  console_config.hpp  console_core.cpp  console_core.hpp  console_draw.cpp  console_draw.hpp  console_input.cpp  console_input.hpp  console_lcd.cpp  console_lcd.hpp  console_timing.cpp  console_timing.hpp  lcd.cpp  lcd.hpp  lcd_draw.cpp  lcd_draw.hpp  main.cpp
src/games/: game_demo.cpp  game_doom.cpp  game_menu.cpp  games_list.hpp
src/lcd_fonts/: lcd_font12.cpp  lcd_font16.cpp  lcd_font20.cpp  lcd_font24.cpp  lcd_font8.cpp  lcd_fonts.hpp
